# aipair

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  TODO.md  justfile
.claude/commands/: aipair.md
docs/: sessions.md
scripts/: build-release.sh  dev-teardown.sh  dev-watch.sh
src/: api.rs  cli.rs  jj.rs  line_mapper.rs  main.rs  mcp.rs  review.rs  session.rs  terminal.rs  timeline.rs  todo.rs  topic.rs
tests/: integration_test.rs
web/: TODO.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  context.tsx  hooks.ts  index.css  main.tsx  store.ts
web/src/components/: ChangeList.tsx  CommentPanel.tsx  DiffViewer.tsx  ErrorBoundary.tsx  GraphLane.test.ts  GraphLane.tsx  SelectedChangeView.tsx  SessionSidebar.tsx  SessionsPanel.tsx  Terminal.tsx  TimelineView.tsx  TodoPanel.tsx
web/src/types/: Author.ts  Change.ts  Comment.ts  Diff.ts  FileDiff.ts  FileStatus.ts  Review.ts  Revision.ts  Thread.ts  ThreadStatus.ts  TodoItem.ts  TodoTree.ts  Topic.ts  TopicStatus.ts  index.ts
