[package]
name = "aipair"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# MCP server
rmcp = { version = "0.9", features = ["server"] }
schemars = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TypeScript type generation
ts-rs = { version = "10", features = ["chrono-impl"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio-test = "0.4"
portpicker = "0.1"
